--- a/nodejs/tasks/main.yml
+++ b/nodejs/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: "Apt HTTPS"
+  apt: pkg=apt-transport-https state=present
+
 - name: "Node apt key"
   apt_key: url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key state=present
 
