--- a/devgui/tasks/main.yml
+++ b/devgui/tasks/main.yml
@@ -1,5 +1,6 @@
 
 - apt: pkg=vim-gtk state=present
+- apt: pkg=gitg state=present
 - apt: pkg=tortoisehg state=present
 - apt: pkg=kdiff3 state=present
 - apt: pkg=meld state=present
