--- a/nodejs/tasks/main.yml
+++ b/nodejs/tasks/main.yml
@@ -1,15 +1,7 @@
-- name: "Apt HTTPS"
-  apt: pkg=apt-transport-https state=present
 
-- name: "Node apt key"
-  apt_key: url=https://deb.nodesource.com/gpgkey/nodesource.gpg.key state=present
+- include: debian.yml
+  when: ansible_pkg_mgr == "apt"
 
-- name: "Node source.list"
-  template: src=sources.list dest=/etc/apt/sources.list.d/nodejs.list
-  notify: 
-      apt-get-update
-
-- meta: flush_handlers
-
-- name: "Node.js"
-  apt: pkg=nodejs state=latest
+- name: "Normal Install (PACMAN)"
+  when: ansible_pkg_mgr == "pacman"
+  pacman: name=nodejs state=present
